# diamondcore2

./: CMakeLists.txt  README  THANKS
dep/ACE_wrappers/ace/: Basic_Types.cpp  Configuration_Import_Export.cpp  IOStream.cpp  Log_Msg.cpp  Message_Block.cpp  Metrics_Cache.h  Notification_Queue.cpp  OS_NS_Thread.cpp  OS_NS_fcntl.cpp  (+7 more)
dep/src/: CMakeLists.txt
sql/: characters.sql  realmd.sql  world.sql
sql/FULL/: world_script_texts.sql  world_script_waypoints.sql  world_scripts_full.sql
sql/Updates/: 45_22_world_diamond_string.sql  46_01_characters_group_member.sql  50_01_world_scriptname_update.sql  52_01_world_scriptname_update.sql  64_01_world_spell_linked_spell.sql  68_01_world_spell_group_stack_rules.sql  71_04_world_diamond_string.sql  71_09_world_diamond_string.sql  76_03_world_item_template.sql  76_06_world_quest_template.sql  77_01_characters_characters.sql  78_02_world_script_texts.sql  78_04_world_scriptname.sql  78_05_world_areatrigger_scripts.sql  78_07_world_command.sql  78_08_world_diamond_string.sql  81_01_world_locales_quest.sql  81_02_world_quest_template.sql  82_03_world_diamond_string.sql  85_02_world_diamond_string.sql  85_03_world_command.sql
src/: CMakeLists.txt
src/Diamond-Realmserver/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  CMakeLists.txt  Diamond-Realmserver.rc  Main.cpp  RealmList.cpp  RealmList.h  diamond-realmserver.conf.dist
src/Diamond-Worldserver/: CMakeLists.txt  CliRunnable.cpp  CliRunnable.h  Diamond-Worldserver.rc  Main.cpp  Master.cpp  Master.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  diamond-worldserver.conf.dist
src/framework/: CMakeLists.txt
src/game/: AccountMgr.cpp  AccountMgr.h  AchievementMgr.cpp  AchievementMgr.h  AddonHandler.cpp  AddonMgr.cpp  AddonMgr.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAV.cpp  BattleGroundBE.cpp  BattleGroundDS.cpp  BattleGroundEY.cpp  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundRL.cpp  BattleGroundRV.cpp  BattleGroundSA.cpp  BattleGroundWS.cpp  Calendar.h  Cell.h  CellImpl.h  Channel.cpp  Channel.h  ChannelMgr.cpp  ChannelMgr.h  CharacterHandler.cpp  (+194 more)
src/scripts/: CMakeLists.txt
src/shared/: ByteBuffer.h  Common.cpp  Common.h  Errors.h  Log.cpp  Log.h  ProgressBar.h  ServiceWin32.cpp  SystemConfig.h  Timer.h  Util.cpp  Util.h  WorldPacket.h
win/: DiamondCore_100.sln  DiamondCore_90.sln
win/VC100/: ACE_vc10.vcxproj  Diamond-Realmserver.vcxproj  Diamond-Worldserver.vcxproj  framework.vcxproj  g3dlite.vcxproj  game.vcxproj  genrevision.vcxproj  shared.vcxproj  sockets.vcxproj  zlib.vcxproj
win/VC90/: Diamond-Realmserver.vcproj  Diamond-Worldserver.vcproj  framework.vcproj  game.vcproj  shared.vcproj  sockets.vcproj
(+304 files in other folders)
